--- a/.env.dev
+++ b/.env.dev
@@ -9,3 +9,15 @@ DISCORD_TOKEN=
 
 # Discord Server ID
 DISCORD_SERVER_ID=
+
+# Discord Annoucement Channel ID
+DISCORD_ANNOUNCEMENT_CHANNEL_ID=
+
+# Discord Guild ID
+DISCORD_GUILD_ID=
+
+# Discord Announcement Name
+DISCORD_ANNOUNCEMENT_NAME=
+
+# Discord Moderator Channel Id
+DISCORD_MODERATOR_CHANNEL_ID=
